feat: added mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -52,24 +52,26 @@
                         <a href="https://play.google.com/store/apps/details?id=com.gspl.gamer"><img src="img/Badgeandroid.png" class="pointer" alt="badge-and" /></a>
 
                     </div>
+                    <div class="stats">
                     <div class="row3 margin-m flex-r justify-bw">
-                        <div>
+                        <div class="number-sec">
                             <h4 class="numbers">30,000</h4>
                             <p class="numbers-text">happy users</p>
                         </div>
-                        <div>
+                        <div class="number-sec">
                             <h4 class="numbers">80,000</h4>
                             <p class="numbers-text">downloads</p>
                         </div>
-                        <div>
+                        <div class="number-sec">
                             <h4 class="numbers">500,000</h4>
                             <p class="numbers-text">prize distribution</p>
                         </div>
-                        <div>
+                        <div class="number-sec">
                             <h4 class="numbers">3,000</h4>
                             <p class="numbers-text">reviews</p>
                         </div>
                     </div>
+                </div>
                 </div>
                 </div>
             </div>
@@ -116,22 +118,22 @@
                         <div class="three-grid-box">
                             <img src="img/icon_luckydraw.png" alt="luckydraw" />
                             <h3 class="typo-lower">Lucky Draw</h3>
-                            <p>Lorem ipsum Lorem ipsum</p>
+                            <p class="desc-lower">Lorem ipsum Lorem ipsum</p>
                         </div>
                         <div class="three-grid-box">
                             <img src="img/icon_taskoffers.png" alt="taskoffers" />
                             <h3 class="typo-lower">Task Offers</h3>
-                            <p>Lorem ipsum Lorem ipsum</p>
+                            <p class="desc-lower">Lorem ipsum Lorem ipsum</p>
                         </div>
                         <div class="three-grid-box">
                             <img src="img/icon_jackpot.png" alt="jackpot" />
                             <h3 class="typo-lower">Jackpot</h3>
-                            <p>Lorem ipsum Lorem ipsum</p>
+                            <p class="desc-lower">Lorem ipsum Lorem ipsum</p>
                         </div>  
                         <div class="three-grid-box">
                             <img src="img/icon_tournaments.png" alt="tournaments" />
                             <h3 class="typo-lower">Tournaments</h3>
-                            <p>Lorem ipsum Lorem ipsum</p>
+                            <p class="desc-lower">Lorem ipsum Lorem ipsum</p>
                         </div> 
                       </div>
 
