fix: added heading content

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                     </div>
                     <div class="head-lower">
                     <div class="row2 margin-m">
-                        <p class="heading">Lorem ipsum dolor sit amet, consectetur</p>
-                        <p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+                        <p class="heading">Turn your fun hour to earn hour</p>
+                        <p class="desc">Get free UC, Diamonds, earn money, FF redeem code, credits and gift card.</p>
                         <a href="https://play.google.com/store/apps/details?id=com.gspl.gamer"><img src="img/Badgeandroid.png" class="pointer" alt="badge-and" /></a>
 
                     </div>
