fix: fixed styling

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                     <div class="final-up-left">
                         <div class="final-up-left-container">
                             <h2 class="final-typo-heading font-wt-lg">Get Free Games Credits</h2>
-                            <p class="font-wt-md">Lorem ipsum dolor sit amet, consectetur</p>
+                            <p class="font-wt-md desc">Get free UC, Diamonds, earn money, FF redeem code, credits and gift card.</p>
                             <a href="https://play.google.com/store/apps/details?id=com.gspl.gamer"><button type="button" class="btn-sec pointer">Download now</button></a>
                         </div>
                         
