fix: fixed styling for 13 inch

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <img class="hero-img2" src="img/Hero_image2.png" alt="hero-img2" />
             </div>
             <div class="two-right">
-                <div>
+                <div class="text-container">
                     <p class="heading"><span class="prim-purple">Who</span> are we ?</p>
                     <p class="desc">mGamer is a reward app that lets you earn coins by completing surveys and playing your favorite games, which you can redeem to get more exciting prizes. We bring forth your favorite games on your platter for you to earn gifts while you enjoy them. Besides, we collaborate with organizations that value your opinion and will pay you for it! Inside Mgamer, there is a tonne of incentive chances with a wide range of rewards for everyone.</p>
                 </div>
@@ -127,7 +127,7 @@
                     <img class="hero-img3" src="img/Hero_image3 (1).png" alt="hero-img3" />
                 </div>
                 <div class="four-down-right">
-                    <div class="four-down-right-container">
+                    <div class="text-container">
                         <p class="heading-four-two">Games & Tournaments</p>
                         <p class="desc">With our wide range of games and offers, we won’t let you bored. So, aim, fire, and Smash your opponents in explosive tournaments. Try your luck to bag up the large rewards now.</p>
                     </div>
