fix: fixed styling for 13 inch

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
                     </div>
                     <div class="stats">
-                    <div class="row3 margin-m flex-r justify-bw">
+                    <div class="row3 margin-row3 flex-r justify-bw">
                         <div class="number-sec">
                             <h4 class="numbers">30,000</h4>
                             <p class="numbers-text">happy users</p>
