--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div class="outer">
+        <!-- class one -->
         <div class="one">
             <div class="one-left">
                 <div class="one-left-outer">
